<resources>
    <string name="app_name">Loc2Loc</string>
    <string name="subtitle">Localiza a los tuyos!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entra</string>
    <string name="action_register">Regístrate</string>
    <string name="action_sign_in_short">Entra</string>
    <string name="contact_permission_rationale">"Los permisos para acceder a los Contactos son necesarios
        para permitir el autocompletado del email."</string>

    <!-- Strings related to errors-->
    <string name="error_user_does_not_exists">El usuario no existe</string>
    <string name="error_invalid_user_password">Password incorrecto</string>
    <string name="error_connection">Error en la conexión: Pruébalo de nuevo más tarde</string>
    <string name="error_updating_profile">Error en la actualización del perfil: Pruébalo de nuevo más tarde</string>
    <string name="error_invalid_register_user_name">El nombre de usuario es inválido</string>
    <string name="error_invalid_register_email">La dirección de correo es inválida</string>
    <string name="error_invalid_register_repeat_email">Las direcciones de correo no coinciden</string>
    <string name="error_invalid_register_password">Formato de password inválido</string>
    <string name="error_incorrect_register_password">Password incorrecto</string>
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_password">Formato de password incorrecto</string>
    <string name="error_incorrect_password">Password incorrecto</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_field_register_required">Campo requerido</string>
    <string name="error_user_already_exists">El usuario ya existe</string>
    <string name="error_weak_password">La contraseña es demasiado débil</string>
    <string name="error_malformed_mail">Dirección de correo mal formada</string>

    <!-- String related to register -->
    <string name="prompt_register_user_name">Nombre de usuario</string>
    <string name="prompt_register_email">Email</string>
    <string name="prompt_register_repeat_email">Repite el email</string>
    <string name="prompt_register_password">Password</string>
    <string name="action_save">Guardar</string>
    <string name="permission_register_rationale">"Los permisos para acceder a los Contactos son necesarios
        para permitir el autocompletado del email."</string>

    <!-- String related to main activity -->
    <string name="title_activity_main">Loc 2 Loc</string>
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="action_settings">Opciones</string>
    <string name="session">Sesión</string>
    <string name="location_permission_rationale">"Para poder acceder, consultar y compartir ubicaciones entre tus contactos es
        necesario autorizar el acceso a tu ubicación."</string>

    <!-- String related to error dialog -->
    <string name="generic_error_title">Error</string>
    <string name="generic_error_descritpion">Se ha producido un error</string>
    <string name="generic_error_positive_button">Aceptar</string>
    <string name="generic_error_negative">Cancelar</string>

    <!-- Menus -->
    <string name="logout">Log out</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Profile fragment -->
    <string name="toolbar_title_profile_fragment">Editar perfil</string>
    <string name="edit_name">Editar nombre</string>
    <string name="edit_mail">Editar email</string>
    <string name="edit_password">Cambiar contraseña</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="title_activity_acces">Acceso</string>
    <string name="name">Nombre</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- String related LinkUser-->
    <string name="linkUser_title">Mis Links</string>
    <string name="search">Buscar</string>

    <!--Splash Screen-->
    <string name="loc">Loc 2 Loc</string>
    <string name="loc2018">Loc 2 Loc 2018</string>

    <!-- String Related FragmentUserLink  -->
    <string name="user_link">Link con usuarios</string>
    <string name="link">Links</string>

    <!--String Related Item Card FragmentUserLink-->
    <string name="id">Id:</string>
    <string name="name_user">Nombre:</string>
    <string name="email_user">Email:</string>

    <!--Strings Related FrgamentListUser-->
    <string name="mylinks">Mis links</string>


    <!--16 May 2018-->


</resources>
