<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:id="@+id/item_link_user">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.appdesigndm.loc2loc.Components.ProfilePhotoComponent
            android:id="@+id/photo_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/mono"/>

       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:gravity="center_vertical">

           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/id"
                   android:layout_weight="1"
                   android:gravity="center"/>
               <TextView
                   android:id="@+id/item_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="center"/>
           </TableRow>

           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/name_user"
                   android:layout_weight="1"
                   android:gravity="center"/>
               <TextView
                   android:id="@+id/item_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Alex"
                   android:layout_weight="1"
                   android:gravity="center"/>
           </TableRow>

           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/email_user"
                   android:layout_weight="1"
                   android:gravity="center"/>
               <TextView
                   android:id="@+id/item_mail"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="center"/>
           </TableRow>
       </TableLayout>
    </LinearLayout>
</FrameLayout>
</android.support.v7.widget.CardView>