<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/dialog_text.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/edit_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/dialog_title_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/separator_grey"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"/>

    <TextView
        android:id="@+id/old_password_text_view"
        style="@style/dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/old_password"
        app:layout_constraintTop_toBottomOf="@id/dialog_title_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/old_password_edit_text"
        style="@style/dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/old_password_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Descripción"/>

    <TextView
        android:id="@+id/new_password_text_view"
        style="@style/dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/old_password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/new_password_edit_text"
        style="@style/dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/new_password_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Descripción"/>

    <com.appdesigndm.loc2loc.Components.CustomButton
        android:id="@+id/dialog_left_button"
        style="@style/texto_app"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintTop_toBottomOf="@id/new_password_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Cancelar"/>

    <com.appdesigndm.loc2loc.Components.CustomButton
        android:id="@+id/dialog_right_button"
        style="@style/texto_app"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:visibility="visible"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintTop_toBottomOf="@+id/new_password_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Aceptar"/>

</android.support.constraint.ConstraintLayout>